@@ -19,6 +19,7 @@ public class CracBuilder {
     public static final String DOCKER_JAVA = "/jdk/bin/java";
     private static final List<String> CRIU_CANDIDATES = Arrays.asList(Utils.TEST_JDK + "/lib/criu", "/usr/sbin/criu", "/sbin/criu");
     private static final String CRIU_PATH;
+    public static final String ENV_LOG_FILE = "CRAC_LOG_FILE";
 
     // This dummy field is here as workaround for (possibly) a JTReg bug;
     // some tests don't build CracTestArg into their Test.d/ directory
@@ -41,6 +42,18 @@ public class CracBuilder {
     private String[] dockerOptions;
 
     boolean containerStarted;
+    boolean logToFile;
+    String cracLogFile;
+    //As opposite to one-stop mode is two steps mode that run application in docker
+    // 1. docker run sleep 3600
+    // 2. docker exec java xxxx
+    // This mode has a flaw when checkpoint failed with message: "Error (criu/files-reg.c:1816): Can't lookup mount=24 for fd=0 path=/dev/null"
+    // If run application with docker exec, the mnt_id of some fds are not in the /proc/$pid/mountinfo.
+    // If run the one-stop mode, this problem is disappeared.
+    boolean oneStopDockerRun;
+    boolean allowSelfAttach;
+
+    boolean bumpPid;
 
     static {
         String path = System.getenv("CRAC_CRIU_PATH");
@@ -124,6 +137,28 @@ public class CracBuilder {
         return this;
     }
 
+    public CracBuilder logToFile(boolean logToFile) {
+        this.logToFile = logToFile;
+        assertNull(this.cracLogFile, "logToFile only can be set once!");
+        this.cracLogFile = "crac-" + System.currentTimeMillis() + ".txt";
+        return this;
+    }
+
+    public CracBuilder oneStopDockerRun(boolean oneStopDockerRun) {
+        this.oneStopDockerRun = oneStopDockerRun;
+        return this;
+    }
+
+    public CracBuilder bumpPid(boolean bumpPid) {
+        this.bumpPid = bumpPid;
+        return this;
+    }
+
+    public CracBuilder allowSelfAttach(boolean allow) {
+        this.allowSelfAttach = allow;
+        return this;
+    }
+
     public CracBuilder inDockerImage(String imageName) {
         assertNull(dockerImageName);
         this.dockerImageName = imageName;
@@ -145,6 +180,9 @@ public class CracBuilder {
     }
 
     public CracProcess startCheckpoint(List<String> javaPrefix) throws Exception {
+        if (oneStopDockerRun) {
+            return startOneStopCheckpoint(javaPrefix);
+        }
         ensureContainerStarted();
         List<String> cmd = prepareCommand(javaPrefix);
         cmd.add("-XX:CRaCCheckpointTo=" + imageDir);
@@ -153,6 +191,55 @@ public class CracBuilder {
         log("Starting process to be checkpointed:");
         log(String.join(" ", cmd));
         return new CracProcess(this, cmd);
+    }
+
+    private CracProcess startOneStopCheckpoint(List<String> javaPrefix) throws Exception {
+        assertNotNull(dockerImageName);
+        assertNotNull(CRIU_PATH);
+        ensureContainerKilled();
+        DockerTestUtils.buildJdkContainerImage(dockerImageName, null,  "jdk-docker");
+        FileUtils.deleteFileTreeWithRetry(Path.of(".", "jdk-docker"));
+        // Make sure we start with a clean image directory
+        DockerTestUtils.execute(Container.ENGINE_COMMAND, "volume", "rm", "cr");
+
+        List<String> runCmds = prepareCommonDockerRunCommands(javaPrefix);
+        runCmds.add("-XX:CRaCCheckpointTo=" + imageDir);
+        runCmds.add(main().getName());
+        runCmds.addAll(Arrays.asList(args()));
+        List<String> cmd = prepareContainerCommand(dockerImageName, dockerOptions,
+                bumpPid ? wrapWithBumpPid(runCmds) : runCmds);
+        log("Starting docker container to be checkpointed:\n" + String.join(" ", cmd));
+
+        return new CracProcess(this, cmd);
+    }
+
+    private List<String> wrapWithBumpPid(List<String> runCmds) {
+        runCmds.addAll(0, Arrays.asList("sh", "/test_src/bump_pid_run.sh"));
+        return runCmds;
+    }
+
+    private List<String> prepareCommonDockerRunCommands(List<String> javaPrefix) {
+        List<String> runCmds = new ArrayList<>();
+        if (javaPrefix != null) {
+            runCmds.addAll(javaPrefix);
+        } else {
+            runCmds.add(DOCKER_JAVA);
+        }
+        runCmds.add("-ea");
+        runCmds.add("-cp");
+        runCmds.add(getClassPath());
+        if (engine != null) {
+            runCmds.add("-XX:CREngine=" + engine.engine);
+        }
+        if (printResources) {
+            runCmds.add("-XX:+UnlockDiagnosticVMOptions");
+            runCmds.add("-XX:+CRPrintResourcesOnCheckpoint");
+        }
+        if (debug) {
+            runCmds.add("-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=0.0.0.0:5005");
+            runCmds.add("-XX:-CRDoThrowCheckpointException");
+        }
+        return runCmds;
     }
 
     void log(String fmt, Object... args) {
@@ -174,18 +261,22 @@ public class CracBuilder {
         }
         if (!containerStarted) {
             ensureContainerKilled();
-            DockerTestUtils.buildJdkContainerImage(dockerImageName, null);
+            DockerTestUtils.buildJdkContainerImage(dockerImageName, null, "jdk-docker");
             FileUtils.deleteFileTreeWithRetry(Path.of(".", "jdk-docker"));
             // Make sure we start with a clean image directory
             DockerTestUtils.execute(Container.ENGINE_COMMAND, "volume", "rm", "cr");
-            List<String> cmd = prepareContainerCommand(dockerImageName, dockerOptions);
+            List<String> cmd = prepareDefaultContainerCommand(dockerImageName, dockerOptions);
             log("Starting docker container:\n" + String.join(" ", cmd));
             assertEquals(0, new ProcessBuilder().inheritIO().command(cmd).start().waitFor());
             containerStarted = true;
         }
     }
 
-    private List<String> prepareContainerCommand(String imageName, String[] options) {
+    private List<String> prepareDefaultContainerCommand(String imageName, String[] options) {
+        return prepareContainerCommand(imageName, options, Arrays.asList("sleep", "3600"));
+    }
+
+    private List<String> prepareContainerCommand(String imageName, String[] options, List<String> runCommands) {
         List<String> cmd = new ArrayList<>();
         cmd.add(Container.ENGINE_COMMAND);
         cmd.addAll(Arrays.asList("run", "--rm", "-d"));
@@ -195,10 +286,18 @@ public class CracBuilder {
         for (var entry : Utils.TEST_CLASS_PATH.split(File.pathSeparator)) {
             cmd.addAll(Arrays.asList("--volume", entry + ":/cp/" + (entryCounter++)));
         }
+        //bumpPid need bump_pid_run.sh,so need mount the test.src
+        if (bumpPid) {
+            cmd.addAll(Arrays.asList("--volume", Path.of(Utils.TEST_SRC).toString() + ":/test_src"));
+        }
         cmd.addAll(Arrays.asList("--volume", "cr:/cr"));
         cmd.addAll(Arrays.asList("--volume", CRIU_PATH + ":/criu"));
         cmd.addAll(Arrays.asList("--env", "CRAC_CRIU_PATH=/criu"));
         cmd.addAll(Arrays.asList("--name", CONTAINER_NAME));
+        if (logToFile) {
+            cmd.addAll(Arrays.asList("--env", "CRAC_LOG_FILE=" + Path.of(System.getProperty("user.dir"), cracLogFile)));
+            cmd.addAll(Arrays.asList("--volume", System.getProperty("user.dir") + ":" + System.getProperty("user.dir")));
+        }
         if (debug) {
             cmd.addAll(Arrays.asList("--publish", "5005:5005"));
         }
@@ -206,7 +305,7 @@ public class CracBuilder {
             cmd.addAll(Arrays.asList(options));
         }
         cmd.add(imageName);
-        cmd.addAll(Arrays.asList("sleep", "3600"));
+        cmd.addAll(runCommands);
         return cmd;
     }
 
@@ -215,12 +314,33 @@ public class CracBuilder {
         DockerTestUtils.removeDockerImage(dockerImageName);
     }
 
+    public void deepClearContainer() throws Exception {
+        DockerTestUtils.execute(Container.ENGINE_COMMAND, "kill", CONTAINER_NAME).getExitValue();
+        DockerTestUtils.execute(Container.ENGINE_COMMAND, "rm", CONTAINER_NAME).getExitValue();
+        DockerTestUtils.removeDockerImage(dockerImageName);
+        DockerTestUtils.execute(Container.ENGINE_COMMAND, "volume", "rm", "cr");
+        //if don't execute prune command , there lots of files under overlay2.
+        DockerTestUtils.execute(Container.ENGINE_COMMAND, "system", "prune", "-f");
+    }
+
+    public void waitUntilContainerExit(long timeout) throws Exception {
+        long start = System.currentTimeMillis();
+        while ((System.currentTimeMillis() - start) < timeout) {
+            String output = DockerTestUtils.execute(Container.ENGINE_COMMAND, "ps", "-f", "name=" + CONTAINER_NAME).getOutput();
+            if (!output.contains(CONTAINER_NAME)) {
+                return;
+            }
+            Thread.sleep(100);
+        }
+        fail("waitUntilContainerExit timeout for " + timeout + " ms.");
+    }
+
     public void recreateContainer(String imageName, String... options) throws Exception {
         assertTrue(containerStarted);
         String minPid = DockerTestUtils.execute(Container.ENGINE_COMMAND, "exec", CONTAINER_NAME,
                 "cat", "/proc/sys/kernel/ns_last_pid").getStdout().trim();
         DockerTestUtils.execute(Container.ENGINE_COMMAND, "kill", CONTAINER_NAME).getExitValue();
-        List<String> cmd = prepareContainerCommand(imageName, options);
+        List<String> cmd = prepareDefaultContainerCommand(imageName, options);
         log("Recreating docker container:\n" + String.join(" ", cmd));
         assertEquals(0, new ProcessBuilder().inheritIO().command(cmd).start().waitFor());
         // We need to cycle PIDs; had we tried to restore right away the exec would get the
@@ -239,11 +359,25 @@ public class CracBuilder {
          return startRestore(null);
     }
     public CracProcess startRestore(List<String> prefixJava) throws Exception {
+        if (oneStopDockerRun) {
+            return startOneStopRestore(prefixJava);
+        }
         ensureContainerStarted();
         List<String> cmd = prepareCommand(prefixJava);
         cmd.add("-XX:CRaCRestoreFrom=" + imageDir);
         log("Starting restored process:");
         log(String.join(" ", cmd));
+        return new CracProcess(this, cmd);
+    }
+
+    private CracProcess startOneStopRestore(List<String> prefixJava) throws Exception {
+        assertNotNull(dockerImageName);
+        assertNotNull(CRIU_PATH);
+
+        List<String> runCmds = prepareCommonDockerRunCommands(prefixJava);
+        runCmds.add("-XX:CRaCRestoreFrom=" + imageDir);
+        List<String> cmd = prepareContainerCommand(dockerImageName, dockerOptions, runCmds);
+        log("Starting docker container to be restore:\n" + String.join(" ", cmd));
         return new CracProcess(this, cmd);
     }
 
@@ -306,6 +440,9 @@ public class CracBuilder {
         if (debug) {
             cmd.add("-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=0.0.0.0:5005");
             cmd.add("-XX:-CRDoThrowCheckpointException");
+        }
+        if (allowSelfAttach) {
+            cmd.add("-Djdk.attach.allowAttachSelf=true");
         }
         return cmd;
     }
